--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,11 @@ on:
 env:
   RENDER_API_URL: https://api.render.com/v1
 
+# Add permissions block
+permissions:
+  contents: read
+  deployments: write
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -89,28 +94,35 @@ jobs:
           fetch-depth: 0
           
       - name: Create deployment
-        id: deployment
+        id: create_deployment
+        continue-on-error: true
         uses: actions/github-script@v6
         with:
           script: |
-            const deployment = await github.rest.repos.createDeployment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              ref: context.sha,
-              environment: 'production',
-              auto_merge: false,
-              required_contexts: []
-            });
-            return deployment.data.id;
+            try {
+              const deployment = await github.rest.repos.createDeployment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                ref: context.sha,
+                environment: 'production',
+                auto_merge: false,
+                required_contexts: []
+              });
+              return deployment.data.id;
+            } catch (error) {
+              console.log('Failed to create deployment:', error.message);
+              return null;
+            }
             
       - name: Update deployment status (in_progress)
+        if: steps.create_deployment.outputs.result != null
         uses: actions/github-script@v6
         with:
           script: |
             await github.rest.repos.createDeploymentStatus({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              deployment_id: ${{ steps.deployment.outputs.result }},
+              deployment_id: ${{ steps.create_deployment.outputs.result }},
               state: 'in_progress'
             });
             
@@ -173,26 +185,26 @@ jobs:
           done
           
       - name: Update deployment status (success)
-        if: success()
+        if: success() && steps.create_deployment.outputs.result != null
         uses: actions/github-script@v6
         with:
           script: |
             await github.rest.repos.createDeploymentStatus({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              deployment_id: ${{ steps.deployment.outputs.result }},
+              deployment_id: ${{ steps.create_deployment.outputs.result }},
               state: 'success',
               environment_url: 'https://givemeorder.app'
             });
             
       - name: Update deployment status (failure)
-        if: failure()
+        if: failure() && steps.create_deployment.outputs.result != null
         uses: actions/github-script@v6
         with:
           script: |
             await github.rest.repos.createDeploymentStatus({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              deployment_id: ${{ steps.deployment.outputs.result }},
+              deployment_id: ${{ steps.create_deployment.outputs.result }},
               state: 'failure'
             }); 
