--- a/render.yaml
+++ b/render.yaml
@@ -25,6 +25,29 @@ services:
           name: order-supplier-db
           property: connectionString
 
+  - type: worker
+    name: order-processor
+    env: node
+    region: oregon
+    plan: starter
+    buildCommand: npm install
+    startCommand: node process-staged-orders.js
+    envVars:
+      - key: NODE_ENV
+        value: production
+      - key: GLIDE_API_URL
+        sync: false
+      - key: GLIDE_API_TOKEN
+        sync: false
+      - key: GLIDE_APP_ID
+        sync: false
+      - key: GLIDE_ORDER_LINES_TABLE_NAME
+        sync: false
+      - key: DATABASE_URL
+        fromDatabase:
+          name: order-supplier-db
+          property: connectionString
+
 databases:
   - name: order-supplier-db
     region: oregon
